src/nginxservice_hw8.yaml
#nginxservice_hw23.yaml

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      nodePort: 30081
  type: NodePort    
  selector:
    app: nginx-app
