src/ingress_hw8.yaml
#ingress_hw23.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: ingress
spec:
  rules:
    - host: ivanov-kuber.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-service
                port:
                  number: 443

  tls:
    - hosts:
        - ivanov-kuber.ru
      secretName: nginx-tls
